# mod-cli

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
src/mod_cli/: __init__.py  cli.py
src/mod_cli/commands/: gh_cmd.py  git_cmd.py  kube_cmd.py
src/mod_cli/core/: config.py  deps.py  output.py  runner.py
tests/: test_deps.py  test_output.py  test_runner.py  test_smoke.py
