[project]
name = "mod-cli"
version = "0.1.0"
description = "Modular administrative CLI wrapping gh, git, kubectl/oc with jq/yq filter support"
readme = "README.md"
authors = [
    { name = "Paul Bergene", email = "paul.bergene@tieto.com" }
]
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
mod = "mod_cli.cli:main"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

